- css styling continued - db updated

--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -31,41 +31,41 @@
 }
 
 body.navbar-is-fixed-top {
-  padding-top: 60px !important;
+  padding-top: 70px !important;
   padding-bottom: 50px !important;
 
   &.admin-menu {
-    padding-top: 60px !important;
+    padding-top: 70px !important;
   }
 
   @media @narrow {
-    padding-top: 100px !important;
+    padding-top: 81px !important;
     padding-bottom: 50px !important;
 
     &.admin-menu {
-      padding-top: 100px !important;
+      padding-top: 81px !important;
     }
   }
   @media @tablet {
-    padding-top: 140px !important;
-    padding-bottom: 200px !important;
+    padding-top: 102px !important;
+    padding-bottom: 140px !important;
 
     &.admin-menu {
-      padding-top: 140px !important;
+      padding-top: 102px !important;
     }
   }
   @media @normal {
-    padding-top: 180px !important;
-    padding-bottom: 200px !important;
+    padding-top: 112px !important;
+    padding-bottom: 170px !important;
 
     &.admin-menu {
-      padding-top: 180px !important;
+      padding-top: 112px !important;
     }
   }
 }
 
 body {
-  -webkit-overflow-scrolling: touch;
+  background-color: @pxl-color-yellow;
 
   .main-container {
     #page-header {
