--- a/all/themes/pixelgarage/less/pxlComponents/node-footer.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-footer.less
@@ -18,10 +18,9 @@
   line-height: 12px;
   letter-spacing: 1.5px;
   text-transform: lowercase;
-  color: #fff;
+  color: white;
   outline: none;
-  #pxl-mixins.border-radius(@border-radius-base);
-  .border-left-radius(0);
+  #pxl-mixins.border-radius(0);
   border: 1px solid @pxl-color-main;
   background-color: @pxl-color-main;
   opacity: 1.0;
@@ -39,8 +38,8 @@
   @media @normal {
     padding: 0 15px;
     height: 32px;
-    font-size: 17px;
-    line-height: 17px;
+    font-size: 18px;
+    line-height: 18px;
   }
 }
 
@@ -63,8 +62,8 @@
       }
     }
 
-    // image
-    .field-name-field-image {
+    // image on the left
+    .field-name-body {
       display: none;
       width: 100%;
 
@@ -75,12 +74,14 @@
       .field-item {
         img {
           margin: 0 auto;
+          padding: 30px 0;
           width: auto !important;
           height: auto !important;
-          max-height: 150px;
+          max-height: 140px;
 
           @media @normal {
-            max-height: 200px;
+            padding: 40px 0;
+            max-height: 170px;
           }
         }
       }
@@ -95,8 +96,11 @@
         display: block;
         position: static;
         transform: none;
-        margin-top: 20px;
+        margin-top: 30px;
         text-align: right;
+      }
+      @media @normal {
+        margin-top: 40px;
       }
 
       .field-item {
@@ -117,39 +121,45 @@
 
     .field-name-newsletter {
       display: none;
-      margin-top: 20px;
+      margin-top: 30px;
 
       .field-item {
+        text-align: right;
         .block-title {
+          display: inline-block;
+          margin: 0 -2px;
+          vertical-align: middle;
+          width: 30%;
           font-family: @pxl-text-font-bold;
-          font-size: 15px;
-          line-height: 15px;
-          color: white;
+          font-size: 18px;
+          line-height: 18px;
+          color: @pxl-color-main;
           text-align: right;
         }
 
         .webform-client-form {
+          display: inline-block;
+          margin: 0 -2px;
           padding: 0;
-
-          label {
-            display: block;
-          }
+          vertical-align: middle;
+          width: 70%;
 
           input.email {
             display: inline-block;
             vertical-align: top;
+            margin: 0;
             padding: 0 10px;
             height: 24px;
             width: 100%;
             font-family: @pxl-text-font-light;
             font-size: 12px;
             line-height: 12px;
-            color: @text-color;
-            .placeholder(@text-color-field);
-            #pxl-mixins.border-radius(@border-radius-base);
-            .border-right-radius(0);
-            border: 1px solid @pxl-color-main;
-            background-color: @pxl-color-main;
+            color: @pxl-color-active;
+            .placeholder(@text-color-placeholder);
+            #pxl-mixins.border-radius(0);
+            border: none;
+            border-bottom: 1px solid @pxl-color-main;
+            background-color: white;
             #pxl-mixins.box-shadow(none);
 
             &:focus {
@@ -159,19 +169,19 @@
 
             @media @narrow {
               height: 28px;
-              font-size: 14px;
-              line-height: 14px;
+              font-size: 15px;
+              line-height: 15px;
             }
             @media @normal {
               height: 32px;
-              font-size: 17px;
-              line-height: 17px;
+              font-size: 18px;
+              line-height: 18px;
             }
           }
 
           .clear {
             display: inline-block;
-            margin: 0 0 0 -4px;
+            margin: 0 -2px;
             padding: 0;
             vertical-align: top;
 
@@ -186,15 +196,15 @@
             margin: 0;
           }
           .webform-component-email {
-            margin: 0;
+            margin: 0 -2px;
             padding: 0;
             display: inline-block;
-            width: 80%;
+            width: 75%;
             background: @pxl-color-main none;
           }
           .form-actions {
             display: inline-block;
-            margin: 0 0 0 -4px;
+            margin: 0 -2px;
             padding: 0;
             vertical-align: top;
             width: 20%;
@@ -212,6 +222,7 @@
 
       @media @tablet {
         display: block;
+        margin-top: 30px;
         .field-item {
           .block-title {
             font-size: 18px;
@@ -221,14 +232,7 @@
       }
       @media @normal {
         margin-top: 40px;
-        .field-item {
-          .block-title {
-            font-size: 23px;
-            line-height: 23px;
-          }
-        }
       }
-
     }
 
   }
